# backlot-old

./: .gitignore  2do.txt  CMakeLists.txt  Doxyfile.client  Doxyfile.server  TODO.txt
docs/: doxygen_filter_path.sh
game/: config.xml  game.xml  hud.xml
game/dialogs/: join.xml  profile.xml  server.xml  settings.xml
game/entities/: bot.lua  bot.xml  bullet.xml  plasmagun.xml  player.lua  player.xml  waypoint.xml  weapon.xml
game/fonts/: menu.font
game/maps/: test.blc  test.blm  test.xml  warstreet.xml
game/menus/: main.xml  pause.xml
game/modes/: arena.xml  ffa.xml
game/overlays/: hud.lua  hud.xml
game/ppeffects/: blur.xml
game/sounds/: license.txt
game/sprites/: license.txt
game/tilesets/: pool.xcf  pool.xml  urban.xml
game/weapons/: plasma.xml
include/: Audio.hpp  Buffer.hpp  Client.hpp  Debug.hpp  Engine.hpp  Graphics.hpp  Input.hpp  Line.hpp  Map.hpp  Music.hpp  NetworkData.hpp  PathFinder.hpp  Player.hpp  Preferences.hpp  Quad.hpp  QuadBatch.hpp  Rectangle.hpp  ReferenceCounted.hpp  Script.hpp  Server.hpp  Sound.hpp  Texture.hpp  Tile.hpp  TileSet.hpp  Timer.hpp  Vector2.hpp
include/client/: Animation.hpp  Audio.hpp  Bullet.hpp  Camera.hpp  Client.hpp  ClientMap.hpp  Dialog.hpp  Effect.hpp  Font.hpp  Game.hpp  Graphics.hpp  GuichanFont.hpp  HUD.hpp  HUDElement.hpp  Input.hpp  ListModel.hpp  Menu.hpp  Music.hpp  Player.hpp  QuadBatch.hpp  ScoreBoard.hpp  Server.hpp  Sound.hpp  SplashScreen.hpp  Texture.hpp  Weapon.hpp
include/client/entity/: Entity.hpp  EntityImage.hpp
include/client/graphics/: Decal.hpp  Font.hpp  Graphics.hpp  PostProcessing.hpp  PostProcessingPass.hpp  QuadBatch.hpp  RenderTarget.hpp  Texture.hpp
include/client/menu/: Dialog.hpp  GuichanFont.hpp  InputReceiver.hpp  Menu.hpp  MenuButton.hpp  MenuElement.hpp  MenuImage.hpp  MenuImageButton.hpp  MenuStyle.hpp  SimpleButton.hpp
include/client/overlay/: Overlay.hpp  OverlayGroup.hpp  OverlayImage.hpp  OverlayItem.hpp
include/entity/: EntityList.hpp  EntityTemplate.hpp  Property.hpp
include/server/: Bullet.hpp  Client.hpp  Game.hpp  Player.hpp  Server.hpp  ServerMap.hpp  Weapon.hpp
include/server/entity/: Entity.hpp  EntityState.hpp
include/support/: Rectangle.hpp  ScreenPosition.hpp  Vector2.hpp  Vector3.hpp
src/: Audio.cpp  Buffer.cpp  Camera.cpp  Client.cpp  Engine.cpp  Graphics.cpp  Input.cpp  Map.cpp  Music.cpp  PathFinder.cpp  Preferences.cpp  QuadBatch.cpp  Script.cpp  Server.cpp  Sound.cpp  Texture.cpp  TileSet.cpp  Timer.cpp  main.cpp
src/client/: Animation.cpp  Audio.cpp  Bullet.cpp  CMakeLists.txt  Camera.cpp  Client.cpp  ClientMap.cpp  Dialog.cpp  Effect.cpp  Engine.cpp  Font.cpp  Game.cpp  Graphics.cpp  GuichanFont.cpp  HUD.cpp  HUDElement.cpp  Input.cpp  ListModel.cpp  Menu.cpp  Music.cpp  Player.cpp  QuadBatch.cpp  ScoreBoard.cpp  Server.cpp  Sound.cpp  SplashScreen.cpp  Texture.cpp  Weapon.cpp  main.cpp
src/client/entity/: Entity.cpp  EntityImage.cpp
src/client/graphics/: Camera.cpp  Decal.cpp  Font.cpp  Graphics.cpp  PostProcessing.cpp  PostProcessingPass.cpp  QuadBatch.cpp  RenderTarget.cpp  Texture.cpp
src/client/menu/: Dialog.cpp  GuichanFont.cpp  ListModel.cpp  Menu.cpp  MenuButton.cpp  MenuElement.cpp  MenuImage.cpp  MenuImageButton.cpp  MenuStyle.cpp  SimpleButton.cpp
src/client/overlay/: Overlay.cpp  OverlayGroup.cpp  OverlayImage.cpp  OverlayItem.cpp
src/entity/: EntityList.cpp  EntityTemplate.cpp  Property.cpp
src/script/: ClientFunctions.cpp  CoreFunctions.cpp  ServerFunctions.cpp
src/server/: Bullet.cpp  CMakeLists.txt  Client.cpp  Engine.cpp  Game.cpp  Player.cpp  Server.cpp  ServerMap.cpp  Weapon.cpp  main.cpp
src/server/entity/: Entity.cpp  EntityState.cpp
src/support/: ScreenPosition.cpp
tests/: CMakeLists.txt  buffertest.cpp  referencecounting.cpp
tools/mapeditor/: .gitignore  CMakeLists.txt  MainWindow.ui  MapEditor.qrc
tools/mapeditor/include/: EditorWindow.hpp  Entity.hpp  Game.hpp  Map.hpp  MapView.hpp  NewMapDialog.hpp  OpenMapDialog.hpp  QuadList.hpp  Tile.hpp  TilePreview.hpp  TileSet.hpp
tools/mapeditor/src/: EditorWindow.cpp  Entity.cpp  Game.cpp  Map.cpp  MapView.cpp  NewMapDialog.cpp  OpenMapDialog.cpp  QuadList.cpp  Tile.cpp  TilePreview.cpp  TileSet.cpp  main.cpp
tools/mapeditor/ui/: MainWindow.ui  NewDialog.ui  OpenDialog.ui
tools/masterserver/: .gitignore  CMakeLists.txt
tools/masterserver/include/: Client.hpp  Connection.hpp  Server.hpp  Socket.hpp
tools/masterserver/src/: Client.cpp  Connection.cpp  Server.cpp  Socket.cpp  main.cpp
